[ADD]: Forudskrevet login. [MOD]: Ændret app nanvn til at startet med gruppe nummer (g9). [MOD]: Omdøbt logind_akt klassen til login_akt.

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <!--Projekt navn-->
-    <string name="app_name">BePeaked Projekt</string>
+    <string name="app_name">g9 BePeaked Projekt</string>
 
     <!--Log ind menu-->
     <string name="login_banner">Login Menu</string>
