--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <!--Projekt navn-->
-    <string name="app_name">BePeaked Project</string>
+    <string name="app_name">g9 BePeaked Project</string>
 
     <!--Log ind menu-->
     <string name="login_banner">Login Menu</string>
